// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syntheses component should match Syntheses snapshot 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container"
  >
    <div
      className="title-section"
    >
      <div>
        <div
          className="title-hyphen"
        >
           
        </div>
        <h1
          className="section-title section-title1 dark-title-1"
        >
          <span>
            Syntheses summary
          </span>
        </h1>
      </div>
    </div>
    <div
      className="content-section margin-l"
    >
      <div
        className="center create-synthesis"
      >
        <a
          className="button-submit button-dark"
          onClick={[Function]}
          style={Object {}}
        >
          <span>
            Create a new synthesis
          </span>
        </a>
      </div>
      <div
        className="no-margin row"
      >
        <div
          className="theme clear theme-first-row-0 col-md-3 col-sm-6 col-xs-12"
        >
          <div
            className="illustration-box synthesis-preview"
          >
            <div
              className="image-box"
              style={
                Object {
                  "backgroundImage": "url(http://foo.com/bar)",
                }
              }
            />
            <a
              className="content-box"
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className="title-container center"
              >
                <h3
                  className="light-title-3"
                >
                  Foo
                </h3>
                <h4
                  className="light-title-4"
                >
                  <span>
                    2017-02-10
                  </span>
                </h4>
              </div>
            </a>
            <div
              className="color-box"
            >
               
            </div>
            <div
              className="box-hyphen"
            >
               
            </div>
            <div
              className="box-hyphen rotate-hyphen"
            >
               
            </div>
          </div>
        </div>
        <div
          className="theme theme-first-row-1 col-md-3 col-sm-6 col-xs-12"
        >
          <div
            className="illustration-box synthesis-preview"
          >
            <div
              className="image-box"
              style={
                Object {
                  "backgroundImage": "url(http://foo.com/bar)",
                }
              }
            />
            <a
              className="content-box"
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className="title-container center"
              >
                <h3
                  className="light-title-3"
                >
                  Bar
                </h3>
                <h4
                  className="light-title-4"
                >
                  <span>
                    2017-02-10
                  </span>
                </h4>
              </div>
            </a>
            <div
              className="color-box"
            >
               
            </div>
            <div
              className="box-hyphen"
            >
               
            </div>
            <div
              className="box-hyphen rotate-hyphen"
            >
               
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Syntheses component should match empty Syntheses snapshot 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container"
  >
    <div
      className="title-section"
    >
      <div>
        <div
          className="title-hyphen"
        >
           
        </div>
        <h1
          className="section-title section-title1 dark-title-1"
        >
          <span>
            Syntheses summary
          </span>
        </h1>
      </div>
    </div>
    <div
      className="content-section margin-l"
    >
      <div
        className="center create-synthesis"
      >
        <a
          className="button-submit button-dark"
          onClick={[Function]}
          style={Object {}}
        >
          <span>
            Create a new synthesis
          </span>
        </a>
      </div>
      <h2
        className="dark-title-2 margin-left-xxl"
      >
        <span>
          There is no synthesis available yet.
        </span>
      </h2>
    </div>
  </div>
</section>
`;
